--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,6 +12,7 @@
     "loading": "Loading...",
     "league": "League",
     "sport": "Sport",
+    "sportSelect": "Select a Sport",
     "alternate": "Alternative Name",
     "close": "Close"
   }
