--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -12,6 +12,7 @@
     "loading": "Cargando...",
     "league": "Liga",
     "sport": "Deporte",
+    "sportSelect": "Selecciona un deporte",
     "alternate": "Nombre Alternativo",
     "close": "Cerrar"
   }
